--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,6 @@
   height: 50px;
   align-items: center;
 }
-
 .days div:hover {
   background-color: #f0f0f0;
 }
@@ -82,6 +81,9 @@ body {
   line-height: 21.5px;
   text-align: left;
   padding-top: 35.24px;
+}
+.current-day {
+  position: relative;
 }
 
 .current-day::after {
