--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,10 @@
   justify-content: center;
 }
 .days .day-22:hover {
-  background-color: #f0f0f0;
+  background-color: #d7e164;
 }
 .days .day-23:hover {
-  background-color: #f0f0f0;
+  background-color: #d7e164;
 }
 main {
   background-color: #ffffff;
